--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,11 +25,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: Deploy to Server
-      uses: easingthemes/ssh-deploy@v2
-      env: 
-          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          SOURCE: "./"
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          TARGET: ${{ secrets.REMOTE_TARGET }}
+    - name: Set up the Key file
+    - run: 'echo "$SSH_KEY" > "private_key.pem"'
+      shell: bash
+      env:
+        SSH_KEY: ${{secrets.SSH_KEY}}
+    - name: Connect to the server
+    - run: ssh -i "private_key.pem" ubuntu@ec2-18-191-48-2.us-east-2.compute.amazonaws.com
+    - run: ls
+    
