--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,12 +19,6 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
     - name: Set up the Key file
       run: 'echo "$SSH_KEY" > "private_key.pem"'
       shell: bash
@@ -33,5 +27,6 @@ jobs:
     - name: Connect to the server
       run: |
         ls
+        touch private_key.pem
         ssh -i "private_key.pem" ubuntu@ec2-18-191-48-2.us-east-2.compute.amazonaws.com
     
