--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Connect to the server
       run: |
         ls
-        touch private_key.pem
-        ssh -i "private_key.pem" ubuntu@ec2-18-191-48-2.us-east-2.compute.amazonaws.com
+        cat private_key.pem
+        
     
