--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,9 +24,8 @@ jobs:
       shell: bash
       env:
         SSH_KEY: ${{secrets.SSH_KEY}}
-    - name: Connect to the server
-      run: |
-        ls
-        cat private_key.pem
-        
+    - name: Display files
+      run: ls
+    - name: Display Private key file
+      run: cat private_key.pem
     
