--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,9 +20,7 @@ jobs:
 
     steps:
     - name: Set up the Key file
-      run: |
-        echo "$SSH_KEY"
-        'echo "$SSH_KEY" > "private_key.pem"'
+      run: echo "$SSH_KEY"
       shell: bash
       env:
         SSH_KEY: ${{secrets.SSH_KEY}}
