--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,12 +27,4 @@ jobs:
 
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME}
-          ls
-
-          #Now we have got the access of EC2 and we will start the deploy .
-          #cd /home/ubuntu/CounterApp &&
-          #git checkout master &&
-          #git fetch --all &&
-          #git reset --hard origin/master &&
-          #git pull origin master &&
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} "ls"
