--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,12 +19,12 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - name: Deploy in EC2
-        env:
-          PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY  }}
-          HOSTNAME: ${{ secrets.REMOTE_HOST  }}
-          USER_NAME: ${{ secrets.REMOTE_USER  }}
-
-        run: |
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} "ls"
+      - name: Connect to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            whoami
+            ls -al
