--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,8 @@ jobs:
           script: |
             whoami
             ls -al
+            pm2 stop app
+            cd test_repo_for_deployment
+            git pull
+            npm ci
+            pm2 start app.js
